--- a/Classes/0.MemoryLatency/02_measuring_performance_of_memory_hierarchy.ipynb
+++ b/Classes/0.MemoryLatency/02_measuring_performance_of_memory_hierarchy.ipynb
@@ -75,7 +75,13 @@
    "execution_count": 2,
    "metadata": {
     "collapsed": false,
-    "hidden": true
+    "deletable": true,
+    "editable": true,
+    "hidden": true,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [],
    "source": [
@@ -173,8 +179,14 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "deletable": true,
+    "editable": true,
     "heading_collapsed": true,
-    "hidden": true
+    "hidden": true,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "source": [
     "### In any case, you can load the code into a cell\n",
@@ -254,7 +266,6 @@
    "metadata": {
     "deletable": true,
     "editable": true,
-    "heading_collapsed": true,
     "run_control": {
      "frozen": false,
      "read_only": false
@@ -270,7 +281,12 @@
    "execution_count": 9,
    "metadata": {
     "collapsed": false,
-    "hidden": true
+    "deletable": true,
+    "editable": true,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [
     {
@@ -293,7 +309,6 @@
     "collapsed": false,
     "deletable": true,
     "editable": true,
-    "hidden": true,
     "run_control": {
      "frozen": false,
      "read_only": false
@@ -329,7 +344,6 @@
     "collapsed": false,
     "deletable": true,
     "editable": true,
-    "hidden": true,
     "run_control": {
      "frozen": false,
      "read_only": false
@@ -349,10 +363,9 @@
     "collapsed": false,
     "deletable": true,
     "editable": true,
-    "hidden": true,
     "run_control": {
-     "frozen": true,
-     "read_only": true
+     "frozen": false,
+     "read_only": false
     },
     "scrolled": true
    },
@@ -412,7 +425,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
+   },
    "source": [
     "## Characterize random access to storage"
    ]
@@ -425,8 +445,8 @@
     "deletable": true,
     "editable": true,
     "run_control": {
-     "frozen": true,
-     "read_only": true
+     "frozen": false,
+     "read_only": false
     }
    },
    "outputs": [
@@ -470,7 +490,12 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true
+    "deletable": true,
+    "editable": true,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "source": [
     "## Characterize sequential access"
@@ -483,10 +508,9 @@
     "collapsed": false,
     "deletable": true,
     "editable": true,
-    "hidden": true,
     "run_control": {
-     "frozen": true,
-     "read_only": true
+     "frozen": false,
+     "read_only": false
     }
    },
    "outputs": [
@@ -553,7 +577,13 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true
+    "deletable": true,
+    "editable": true,
+    "heading_collapsed": true,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "source": [
     "## Logging our results\n",
@@ -565,7 +595,13 @@
    "execution_count": 48,
    "metadata": {
     "collapsed": false,
-    "hidden": true
+    "deletable": true,
+    "editable": true,
+    "hidden": true,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [],
    "source": [
@@ -578,7 +614,13 @@
    "execution_count": 51,
    "metadata": {
     "collapsed": false,
-    "hidden": true
+    "deletable": true,
+    "editable": true,
+    "hidden": true,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [
     {
@@ -617,7 +659,13 @@
    "execution_count": 53,
    "metadata": {
     "collapsed": false,
-    "hidden": true
+    "deletable": true,
+    "editable": true,
+    "hidden": true,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [
     {
@@ -637,7 +685,13 @@
    "execution_count": 57,
    "metadata": {
     "collapsed": false,
-    "hidden": true
+    "deletable": true,
+    "editable": true,
+    "hidden": true,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [],
    "source": [
@@ -654,7 +708,13 @@
    "execution_count": 58,
    "metadata": {
     "collapsed": false,
-    "hidden": true
+    "deletable": true,
+    "editable": true,
+    "hidden": true,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [
     {
@@ -684,7 +744,13 @@
    "execution_count": 59,
    "metadata": {
     "collapsed": true,
-    "hidden": true
+    "deletable": true,
+    "editable": true,
+    "hidden": true,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [],
    "source": [
@@ -696,7 +762,13 @@
    "execution_count": 65,
    "metadata": {
     "collapsed": true,
-    "hidden": true
+    "deletable": true,
+    "editable": true,
+    "hidden": true,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [],
    "source": [
@@ -708,7 +780,13 @@
    "execution_count": 66,
    "metadata": {
     "collapsed": true,
-    "hidden": true
+    "deletable": true,
+    "editable": true,
+    "hidden": true,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [],
    "source": [
@@ -720,7 +798,13 @@
    "execution_count": 67,
    "metadata": {
     "collapsed": false,
-    "hidden": true
+    "deletable": true,
+    "editable": true,
+    "hidden": true,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [
     {
@@ -750,7 +834,13 @@
    "execution_count": null,
    "metadata": {
     "collapsed": true,
-    "hidden": true
+    "deletable": true,
+    "editable": true,
+    "hidden": true,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [],
    "source": []
@@ -760,7 +850,7 @@
   "anaconda-cloud": {},
   "hide_input": false,
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 2",
    "language": "python",
    "name": "python2"
   },
@@ -774,7 +864,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "version": "2.7.6"
   },
   "toc": {
    "colors": {
@@ -800,7 +890,8 @@
     "width": "142px"
    },
    "toc_section_display": "block",
-   "toc_window_display": true
+   "toc_window_display": true,
+   "widenNotebook": false
   }
  },
  "nbformat": 4,
