Final Release of First Homework! Addest SparkBasic Beta

--- a/Classes/0.MemoryLatency/01_SimpleCount.ipynb
+++ b/Classes/0.MemoryLatency/01_SimpleCount.ipynb
@@ -170,8 +170,7 @@
    },
    "source": [
     "### Simple Count\n",
-    "First, lets try counting words using the most straight-forward approach.\n",
-    "We create a dictionary `D` and then go through the list of words `all`. For each word we increment the corresponding entry in `D` if the word exists as a key in the dictionary, if it is not in the dictionary, we add it to the dictionary"
+    "First, lets try counting words using the most straight-forward approach. We create a dictionary `D` and then go through the list of words `all`. For each word we increment the corresponding entry in `D` if the word exists as a key in the dictionary, if it is not in the dictionary, we add it to the dictionary\n"
    ]
   },
   {
@@ -187,46 +186,6 @@
     },
     "slideshow": {
      "slide_type": "fragment"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "def simple_count(list):\n",
-    "    D={}\n",
-    "    for w in list:\n",
-    "        if w in D.keys():\n",
-    "            D[w]+=1\n",
-    "        else:\n",
-    "            D[w]=1\n",
-    "    return D\n",
-    "D=simple_count(all)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true,
-    "run_control": {
-     "frozen": false,
-     "read_only": false
-    }
-   },
-   "source": [
-    "While this takes a long time, it is **not** because of memory locality. Rather, it is simply because using `D.keys()` creates a long list before checking if `w` is in the list This can be easily fixed by replacing `D.keys()` by `D`."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true,
-    "run_control": {
-     "frozen": false,
-     "read_only": false
     }
    },
    "outputs": [],
@@ -314,8 +273,11 @@
    "outputs": [],
    "source": [
     "%%time\n",
+    "from time import time\n",
     "def sort_count(list):\n",
+    "    t0=time()\n",
     "    S=sorted(list)\n",
+    "    t1=time()\n",
     "    D={}\n",
     "    current=''\n",
     "    count=0\n",
@@ -327,8 +289,10 @@
     "                D[current]=count\n",
     "            count=1\n",
     "            current=w\n",
-    "    return D\n",
-    "D=sort_count(all)"
+    "    t2=time()\n",
+    "    return D,t1-t0,t2-t1\n",
+    "D,sort_time,count_time=sort_count(all)\n",
+    "print 'sort time= %5.1f ms, count time=%5.1f ms'%(1000*sort_time,1000*count_time)"
    ]
   },
   {
