--- a/Classes/0.MemoryLatency/02_measuring_performance_of_memory_hierarchy.ipynb
+++ b/Classes/0.MemoryLatency/02_measuring_performance_of_memory_hierarchy.ipynb
@@ -74,23 +74,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true,
-    "run_control": {
-     "frozen": false,
-     "read_only": false
-    }
-   },
-   "outputs": [],
-   "source": [
-    "!rm -rf logs stats.txt"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 3,
    "metadata": {
     "collapsed": false,
@@ -433,7 +416,13 @@
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [],
    "source": [
@@ -442,7 +431,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
+   },
    "source": [
     "###  Run the following code ONLY if you are running a Virtual Machine"
    ]
@@ -451,7 +447,13 @@
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [],
    "source": [
@@ -460,7 +462,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
+   },
    "source": [
     "### Collecting System Description: For Mac users ONLY\n",
     "\n",
@@ -489,7 +498,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
+   },
    "source": [
     "### Collecting System Description:  For Linux OS users ONLY\n",
     "\n",
@@ -533,7 +549,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
+   },
    "source": [
     "###  Collecting System Description: For Windows users ONLY \n",
     "The next cell needs to be run only by Windows OS users. If run on other OS platforms, it will throw error."
@@ -543,7 +566,13 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [],
    "source": [
@@ -633,7 +662,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
+   },
    "source": [
     "## Important:\n",
     "Make sure to delete the logs directory! The commands that you ran above made the log directory bigger that 10gb, you WILL NOT be submitting the log directory."
@@ -641,7 +677,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
+   },
    "source": [
     "\n",
     "\n",
