--- a/Classes/0.MemoryLatency/01_SimpleCount.ipynb
+++ b/Classes/0.MemoryLatency/01_SimpleCount.ipynb
@@ -593,7 +593,7 @@
     "    #SOLUTION BEGINS\n",
     "    top_n_kmers = []\n",
     "    #SOLUTION ENDS\n",
-    "    print 'most common %d-mers\\n'%k,'\\n'.join(['%d:\\t%s'%c for c in top_n_kmers])\n",
+    "    print 'most common %d-mers\\n'%k,'\\n'.join(['%s:\\t%d'%c for c in top_n_kmers])\n",
     "    return top_n_kmers"
    ]
   },
