finalized notebook for pushing SparkBasic homework

--- a/Classes/0.MemoryLatency/01_SimpleCount_MASTER.ipynb
+++ b/Classes/0.MemoryLatency/01_SimpleCount_MASTER.ipynb
@@ -32,37 +32,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
-    "deletable": false,
-    "editable": false,
-    "nbgrader": {
-     "checksum": "e631ecd58d1a3c069a66ec211d44abf0",
-     "grade": false,
-     "grade_id": "init_stuff",
-     "locked": true,
-     "schema_version": 1,
-     "solution": false
-    },
-    "run_control": {
-     "frozen": false,
-     "read_only": false
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# initialization for grading\n",
-    "import sys\n",
-    "import os \n",
-    "testPath = '/'.join(os.getcwd().split('/')[:-1]) + \"/Tester\"\n",
-    "sys.path.insert(0, testPath )\n",
-    "\n",
-    "pickleFile = testPath+ \"/SimpleCount.pkl\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true,
@@ -170,22 +139,20 @@
    },
    "source": [
     "### Simple Count\n",
-    "First, lets try counting words using the most straight-forward approach. We create a dictionary `D` and then go through the list of words `all`. For each word we increment the corresponding entry in `D` if the word exists as a key in the dictionary, if it is not in the dictionary, we add it to the dictionary\n"
+    "First, lets try counting words using the most straight-forward approach.\n",
+    "We create a dictionary `D` and then go through the list of words `all`. For each word we increment the corresponding entry in `D` if the word exists as a key in the dictionary, if it is not in the dictionary, we add it to the dictionary"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "deletable": true,
     "editable": true,
     "run_control": {
      "frozen": false,
      "read_only": false
-    },
-    "slideshow": {
-     "slide_type": "fragment"
     }
    },
    "outputs": [],
@@ -310,9 +277,118 @@
    },
    "source": [
     "### Conclusions\n",
-    "We have showed and compared two methods for counting workds: simple count and sorted count. The size of the text here is sufficiently small that the wholetext can easily fit in main memory, or even in L2 Cache. Therefor there is no advantage to sorted count.\n",
+    "We have showed and compared two methods for counting workds: simple count and sorted count. Counting is slightly faster after sorting, however, for this size data, the sort time erases the advantage.\n",
     "\n",
-    "We will later see that when the text is too large to fit into the memory of a single machine, sorted count is faster than simple count."
+    "With larger text, especially text that that is too large to fit in the memory of one machine, the advantage of sorting before counting becomes dominant."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
+   },
+   "source": [
+    "## Teacher Stuff"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import Tester.SimpleCount_MASTER as SimpleCount_MASTER\n",
+    "import Tester.SimpleCount as SimpleCount\n",
+    "pickleFile=\"Tester/SimpleCount.pkl\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
+   },
+   "outputs": [],
+   "source": [
+    "SimpleCount_MASTER.gen_exercise0_1(pickleFile)\n",
+    "SimpleCount_MASTER.gen_exercise0_2(pickleFile)\n",
+    "SimpleCount_MASTER.gen_exercise0_3(pickleFile)\n",
+    "SimpleCount_MASTER.gen_exercise0_4(pickleFile)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
+   },
+   "outputs": [],
+   "source": [
+    "SimpleCount_MASTER.exercise0_1(\"Tester/SimpleCount.pkl\", SimpleCount_MASTER.func_ex0_1)\n",
+    "SimpleCount_MASTER.exercise0_2(\"Tester/SimpleCount.pkl\", SimpleCount_MASTER.func_ex0_2)\n",
+    "SimpleCount_MASTER.exercise0_3(\"Tester/SimpleCount.pkl\", SimpleCount_MASTER.func_ex0_3)\n",
+    "SimpleCount_MASTER.exercise0_4(\"Tester/SimpleCount.pkl\", SimpleCount_MASTER.func_ex0_4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
+   },
+   "outputs": [],
+   "source": [
+    "SimpleCount.exercise0_1(pickleFile, SimpleCount_MASTER.func_ex0_1)\n",
+    "SimpleCount.exercise0_2(pickleFile, SimpleCount_MASTER.func_ex0_2)\n",
+    "SimpleCount.exercise0_3(pickleFile, SimpleCount_MASTER.func_ex0_3)\n",
+    "SimpleCount.exercise0_4(pickleFile, SimpleCount_MASTER.func_ex0_4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "deletable": true,
+    "editable": true,
+    "heading_collapsed": true,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
+   },
+   "source": [
+    "### End of Teacher Stuff"
    ]
   },
   {
@@ -376,10 +452,9 @@
    "execution_count": null,
    "metadata": {
     "collapsed": false,
-    "deletable": false,
-    "editable": false,
+    "deletable": true,
+    "editable": true,
     "nbgrader": {
-     "checksum": "8f9f57cc134f6348c414ce12d0de394b",
      "grade": true,
      "grade_id": "ex1",
      "locked": true,
@@ -394,8 +469,40 @@
    },
    "outputs": [],
    "source": [
-    "import SimpleCount\n",
+    "import Tester.SimpleCount as SimpleCount\n",
     "SimpleCount.exercise0_1(pickleFile, compute_kmers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# %load ../Tester/SimpleCount.py\n",
+    "import pickle\n",
+    "\n",
+    "from basic_tester import *\n",
+    "\n",
+    "def exercise0_1(pickleFile, func_student):\n",
+    "    checkExerciseFromPickle(pickleFile, func_student,TestList,'ex0_1', multiInputs=True)\n",
+    "    \n",
+    "def exercise0_2(pickleFile, func_student):\n",
+    "    checkExerciseFromPickle(pickleFile, func_student,TestList,'ex0_2')\n",
+    "    \n",
+    "def exercise0_3(pickleFile, func_student):\n",
+    "    checkExerciseFromPickle(pickleFile, func_student,TestList,'ex0_3')\n",
+    "    \n",
+    "def exercise0_4(pickleFile, func_student):\n",
+    "    checkExerciseFromPickle(pickleFile, func_student,TestList,'ex0_4', multiInputs=True)\n"
    ]
   },
   {
@@ -448,10 +555,9 @@
    "execution_count": null,
    "metadata": {
     "collapsed": false,
-    "deletable": false,
-    "editable": false,
+    "deletable": true,
+    "editable": true,
     "nbgrader": {
-     "checksum": "c663a52b9b63c8ca67e161775e42f2bf",
      "grade": true,
      "grade_id": "ex2",
      "locked": true,
@@ -466,7 +572,7 @@
    },
    "outputs": [],
    "source": [
-    "import SimpleCount\n",
+    "import Tester.SimpleCount as SimpleCount\n",
     "SimpleCount.exercise0_2(pickleFile, count_kmers)"
    ]
   },
@@ -522,10 +628,9 @@
    "execution_count": null,
    "metadata": {
     "collapsed": false,
-    "deletable": false,
-    "editable": false,
+    "deletable": true,
+    "editable": true,
     "nbgrader": {
-     "checksum": "78decc89af7aa96d6c33322364dca208",
      "grade": true,
      "grade_id": "ex3",
      "locked": true,
@@ -540,7 +645,7 @@
    },
    "outputs": [],
    "source": [
-    "import SimpleCount\n",
+    "import Tester.SimpleCount as SimpleCount\n",
     "SimpleCount.exercise0_3(pickleFile, sort_counts)"
    ]
   },
@@ -593,7 +698,7 @@
     "    #SOLUTION BEGINS\n",
     "    top_n_kmers = []\n",
     "    #SOLUTION ENDS\n",
-    "    print 'most common %d-mers\\n'%k,'\\n'.join(['%s:\\t%d'%c for c in top_n_kmers])\n",
+    "    print 'most common %d-mers\\n'%k,'\\n'.join(['%d:\\t%s'%c for c in top_n_kmers])\n",
     "    return top_n_kmers"
    ]
   },
@@ -602,10 +707,9 @@
    "execution_count": null,
    "metadata": {
     "collapsed": false,
-    "deletable": false,
-    "editable": false,
+    "deletable": true,
+    "editable": true,
     "nbgrader": {
-     "checksum": "58f7e46e05544a48dc046fb539ca0b1e",
      "grade": true,
      "grade_id": "ex4",
      "locked": true,
@@ -620,13 +724,14 @@
    },
    "outputs": [],
    "source": [
-    "import SimpleCount\n",
+    "import Tester.SimpleCount as SimpleCount\n",
     "SimpleCount.exercise0_4(pickleFile, get_top_n_kmers)"
    ]
   }
  ],
  "metadata": {
   "anaconda-cloud": {},
+  "celltoolbar": "Create Assignment",
   "hide_input": false,
   "kernelspec": {
    "display_name": "Python 2",
@@ -662,7 +767,7 @@
    "threshold": 4,
    "toc_cell": false,
    "toc_section_display": "block",
-   "toc_window_display": true,
+   "toc_window_display": false,
    "widenNotebook": false
   }
  },
