--- a/Classes/1.SparkBasic/4. Word Count_HW.ipynb
+++ b/Classes/1.SparkBasic/4. Word Count_HW.ipynb
@@ -174,6 +174,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "WordCount.get_data()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "deletable": false,
