--- a/Classes/0.MemoryLatency/01_SimpleCount.ipynb
+++ b/Classes/0.MemoryLatency/01_SimpleCount.ipynb
@@ -30,9 +30,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "deletable": false,
     "editable": false,
     "nbgrader": {
@@ -48,12 +48,21 @@
      "read_only": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/wusai/CSE255-DSE230/Classes/Tester\n"
+     ]
+    }
+   ],
    "source": [
     "# initialization for grading\n",
     "import sys\n",
     "import os \n",
     "testPath = '/'.join(os.getcwd().split('/')[:-1]) + \"/Tester\"\n",
+    "print testPath\n",
     "sys.path.insert(0, testPath )\n",
     "\n",
     "pickleFile = testPath+ \"/SimpleCount.pkl\""
@@ -61,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -74,7 +83,15 @@
      "slide_type": "skip"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Populating the interactive namespace from numpy and matplotlib\n"
+     ]
+    }
+   ],
    "source": [
     "from string import lower,strip\n",
     "import re\n",
@@ -101,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -111,7 +128,17 @@
      "read_only": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-rw-rw-r-- 1 wusai wusai 1257260 Apr 10 14:16 ../../Data/Moby-Dick.txt\n",
+      "CPU times: user 40 ms, sys: 116 ms, total: 156 ms\n",
+      "Wall time: 2.48 s\n"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
     "import urllib\n",
@@ -126,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -139,7 +166,16 @@
      "slide_type": "skip"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the book contains 221908 words\n",
+      "['the', 'project', 'gutenberg', 'ebook', 'of', 'moby', 'dick', 'or', 'the', 'whale', 'by', 'herman', 'melville', 'this', 'ebook', 'is', 'for', 'the', 'use', 'of', 'anyone', 'anywhere', 'at', 'no', 'cost', 'and', 'with', 'almost', 'no', 'restrictions', 'whatsoever', 'you', 'may', 'copy', 'it', 'give', 'it', 'away', 'or', 're', 'use', 'it', 'under', 'the', 'terms', 'of', 'the', 'project', 'gutenberg', 'license', 'included', 'with', 'this', 'ebook', 'or', 'online', 'at', 'www', 'gutenberg', 'org', 'title', 'moby', 'dick', 'or', 'the', 'whale', 'author', 'herman', 'melville', 'last', 'updated', 'january', '3', '2009', 'posting', 'date', 'december', '25', '2008', 'ebook', '2701', 'release', 'date', 'june', '2001', 'language', 'english', 'start', 'of', 'this', 'project', 'gutenberg', 'ebook', 'moby', 'dick', 'or', 'the', 'whale', 'produced', 'by']\n"
+     ]
+    }
+   ],
    "source": [
     "#%%time\n",
     "file=open(data_dir+'/'+filename,'r')\n",
@@ -152,7 +188,8 @@
     "    words=[w for w in re.split(r'\\W+',line) if len(w)>0]\n",
     "    #print line, words\n",
     "    all+=words\n",
-    "print 'the book contains',len(all),'words'"
+    "print 'the book contains',len(all),'words'\n",
+    "print all[:100]"
    ]
   },
   {
@@ -170,15 +207,14 @@
    },
    "source": [
     "### Simple Count\n",
-    "First, lets try counting words using the most straight-forward approach.\n",
-    "We create a dictionary `D` and then go through the list of words `all`. For each word we increment the corresponding entry in `D` if the word exists as a key in the dictionary, if it is not in the dictionary, we add it to the dictionary"
+    "First, lets try counting words using the most straight-forward approach. We create a dictionary `D` and then go through the list of words `all`. For each word we increment the corresponding entry in `D` if the word exists as a key in the dictionary, if it is not in the dictionary, we add it to the dictionary\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "deletable": true,
     "editable": true,
     "run_control": {
@@ -189,47 +225,16 @@
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "def simple_count(list):\n",
-    "    D={}\n",
-    "    for w in list:\n",
-    "        if w in D.keys():\n",
-    "            D[w]+=1\n",
-    "        else:\n",
-    "            D[w]=1\n",
-    "    return D\n",
-    "D=simple_count(all)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true,
-    "run_control": {
-     "frozen": false,
-     "read_only": false
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 84 ms, sys: 20 ms, total: 104 ms\n",
+      "Wall time: 93.1 ms\n"
+     ]
     }
-   },
-   "source": [
-    "While this takes a long time, it is **not** because of memory locality. Rather, it is simply because using `D.keys()` creates a long list before checking if `w` is in the list This can be easily fixed by replacing `D.keys()` by `D`."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true,
-    "run_control": {
-     "frozen": false,
-     "read_only": false
-    }
-   },
-   "outputs": [],
+   ],
    "source": [
     "%%time\n",
     "def simple_count(list):\n",
@@ -259,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -272,7 +277,27 @@
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('the', 14620),\n",
+       " ('of', 6732),\n",
+       " ('and', 6502),\n",
+       " ('a', 4799),\n",
+       " ('to', 4706),\n",
+       " ('in', 4230),\n",
+       " ('that', 3100),\n",
+       " ('it', 2536),\n",
+       " ('his', 2530),\n",
+       " ('i', 2127)]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "S=sorted(D.items(),key=lambda d:d[1],reverse=True)\n",
     "S[:10]"
@@ -298,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -311,11 +336,24 @@
      "slide_type": "subslide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sort time= 160.2 ms, count time= 31.1 ms\n",
+      "CPU times: user 192 ms, sys: 4 ms, total: 196 ms\n",
+      "Wall time: 195 ms\n"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
+    "from time import time\n",
     "def sort_count(list):\n",
+    "    t0=time()\n",
     "    S=sorted(list)\n",
+    "    t1=time()\n",
     "    D={}\n",
     "    current=''\n",
     "    count=0\n",
@@ -327,8 +365,10 @@
     "                D[current]=count\n",
     "            count=1\n",
     "            current=w\n",
-    "    return D\n",
-    "D=sort_count(all)"
+    "    t2=time()\n",
+    "    return D,t1-t0,t2-t1\n",
+    "D,sort_time,count_time=sort_count(all)\n",
+    "print 'sort time= %5.1f ms, count time=%5.1f ms'%(1000*sort_time,1000*count_time)"
    ]
   },
   {
@@ -389,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -403,13 +443,18 @@
    "source": [
     "def compute_kmers(text,k):\n",
     "    kmers = []\n",
+    "    for line in text:\n",
+    "        line = line.split()\n",
+    "        for i in xrange(len(line)-k+1):\n",
+    "            s = ' '.join(line[i:i+k])\n",
+    "            kmers.append(s)\n",
     "    # your implementation goes here\n",
     "    return kmers"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {
     "collapsed": false,
     "deletable": false,
@@ -428,7 +473,16 @@
      "read_only": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Correct Output: ['coordinating conjunctions', 'conjunctions are', 'are useful', 'useful for', 'for connecting', 'connecting sentences', 'sentences but', 'but compound', 'compound sentences', 'sentences often', 'often are', 'are overused', 'while coordinating', 'coordinating conjunctions', 'conjunctions can', 'can indicate', 'indicate some', 'some type', 'type of', 'of relationship', 'relationship between', 'between the', 'the two', 'two independent', 'independent clauses', 'clauses in', 'in the', 'the sentence', 'sentence they', 'they sometimes', 'sometimes do', 'do not', 'not indicate', 'indicate much', 'much of', 'of a', 'a relationship']\n",
+      "Great Job!\n"
+     ]
+    }
+   ],
    "source": [
     "import SimpleCount\n",
     "SimpleCount.exercise0_1(pickleFile, compute_kmers)"
@@ -461,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -475,13 +529,18 @@
    "source": [
     "def count_kmers(kmers):\n",
     "    kmers_count = dict()\n",
+    "    for km in kmers:\n",
+    "        if km in kmers_count:\n",
+    "            kmers_count[km]+=1\n",
+    "        else:\n",
+    "            kmers_count[km] = 1\n",
     "    # your implementation goes here \n",
     "    return kmers_count"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {
     "collapsed": false,
     "deletable": false,
@@ -500,7 +559,16 @@
      "read_only": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Correct Output: {'sometimes do': 1, 'do not': 1, 'two independent': 1, 'conjunctions are': 1, 'much of': 1, 'but compound': 1, 'connecting sentences': 1, 'indicate some': 1, 'compound sentences': 1, 'between the': 1, 'coordinating conjunctions': 2, 'clauses in': 1, 'are useful': 1, 'independent clauses': 1, 'not indicate': 1, 'the sentence': 1, 'often are': 1, 'useful for': 1, 'relationship between': 1, 'type of': 1, 'conjunctions can': 1, 'of a': 1, 'some type': 1, 'sentences but': 1, 'indicate much': 1, 'in the': 1, 'sentence they': 1, 'while coordinating': 1, 'can indicate': 1, 'the two': 1, 'a relationship': 1, 'of relationship': 1, 'they sometimes': 1, 'for connecting': 1, 'sentences often': 1, 'are overused': 1}\n",
+      "Great Job!\n"
+     ]
+    }
+   ],
    "source": [
     "import SimpleCount\n",
     "SimpleCount.exercise0_2(pickleFile, count_kmers)"
@@ -535,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -548,14 +616,13 @@
    "outputs": [],
    "source": [
     "def sort_counts(kmers_counts):\n",
-    "    sorted_counts = []\n",
-    "    # your implementation goes here\n",
+    "    sorted_counts = sorted(kmers_counts.items(), key = lambda (k, v): (-v, k))\n",
     "    return sorted_counts"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "metadata": {
     "collapsed": false,
     "deletable": false,
@@ -574,7 +641,16 @@
      "read_only": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Correct Output: [('coordinating conjunctions', 2), ('a relationship', 1), ('are overused', 1), ('are useful', 1), ('between the', 1), ('but compound', 1), ('can indicate', 1), ('clauses in', 1), ('compound sentences', 1), ('conjunctions are', 1), ('conjunctions can', 1), ('connecting sentences', 1), ('do not', 1), ('for connecting', 1), ('in the', 1), ('independent clauses', 1), ('indicate much', 1), ('indicate some', 1), ('much of', 1), ('not indicate', 1), ('of a', 1), ('of relationship', 1), ('often are', 1), ('relationship between', 1), ('sentence they', 1), ('sentences but', 1), ('sentences often', 1), ('some type', 1), ('sometimes do', 1), ('the sentence', 1), ('the two', 1), ('they sometimes', 1), ('two independent', 1), ('type of', 1), ('useful for', 1), ('while coordinating', 1)]\n",
+      "Great Job!\n"
+     ]
+    }
+   ],
    "source": [
     "import SimpleCount\n",
     "SimpleCount.exercise0_3(pickleFile, sort_counts)"
@@ -610,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -627,15 +703,15 @@
     "    kmers_count = count_kmers(kmers)\n",
     "    sorted_counts = sort_counts(kmers_count)\n",
     "    #SOLUTION BEGINS\n",
-    "    top_n_kmers = []\n",
+    "    top_n_kmers = sorted_counts[:n]\n",
     "    #SOLUTION ENDS\n",
-    "    print 'most common %d-mers\\n'%k,'\\n'.join(['%d:\\t%s'%c for c in top_n_kmers])\n",
+    "    print 'most common %d-mers\\n'%k,'\\n'.join(['%s:\\t%d'%c for c in top_n_kmers])\n",
     "    return top_n_kmers"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "metadata": {
     "collapsed": false,
     "deletable": false,
@@ -654,7 +730,22 @@
      "read_only": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "most common 2-mers\n",
+      "coordinating conjunctions:\t2\n",
+      "a relationship:\t1\n",
+      "are overused:\t1\n",
+      "are useful:\t1\n",
+      "between the:\t1\n",
+      "Correct Output: [('coordinating conjunctions', 2), ('a relationship', 1), ('are overused', 1), ('are useful', 1), ('between the', 1)]\n",
+      "Great Job!\n"
+     ]
+    }
+   ],
    "source": [
     "import SimpleCount\n",
     "SimpleCount.exercise0_4(pickleFile, get_top_n_kmers)"
@@ -679,7 +770,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "version": "2.7.13"
   },
   "toc": {
    "colors": {
