--- a/Classes/1.5.MoreSpark/5. Execution plans, Lazy Evaluation, and caching.ipynb
+++ b/Classes/1.5.MoreSpark/5. Execution plans, Lazy Evaluation, and caching.ipynb
@@ -188,6 +188,12 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "deletable": true,
+    "editable": true,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    },
     "slideshow": {
      "slide_type": "slide"
     }
@@ -237,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -252,6 +258,8 @@
    },
    "outputs": [],
    "source": [
+    "import findspark\n",
+    "findspark.init()\n",
     "from pyspark import SparkContext\n",
     "sc = SparkContext(master=\"local[3]\")  #note that we set the number of workers to 3"
    ]
@@ -276,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -295,8 +303,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 63.2 ms, sys: 26 ms, total: 89.2 ms\n",
-      "Wall time: 100 ms\n"
+      "CPU times: user 68.3 ms, sys: 42.2 ms, total: 110 ms\n",
+      "Wall time: 372 ms\n"
      ]
     }
    ],
@@ -324,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -341,10 +349,10 @@
     {
      "data": {
       "text/plain": [
-       "'(3) ParallelCollectionRDD[0] at parallelize at PythonRDD.scala:423 []'"
+       "'(3) ParallelCollectionRDD[0] at parallelize at PythonRDD.scala:475 []'"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -373,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -396,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -414,8 +422,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 11 µs, sys: 5 µs, total: 16 µs\n",
-      "Wall time: 16.9 µs\n"
+      "CPU times: user 9 µs, sys: 4 µs, total: 13 µs\n",
+      "Wall time: 15 µs\n"
      ]
     },
     {
@@ -424,7 +432,7 @@
        "0.2836621854632263"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -455,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -474,8 +482,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 22 µs, sys: 4 µs, total: 26 µs\n",
-      "Wall time: 26 µs\n"
+      "CPU times: user 26 µs, sys: 14 µs, total: 40 µs\n",
+      "Wall time: 44.1 µs\n"
      ]
     }
    ],
@@ -562,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -581,8 +589,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(3) PythonRDD[1] at RDD at PythonRDD.scala:43 []\n",
-      " |  ParallelCollectionRDD[0] at parallelize at PythonRDD.scala:423 []\n"
+      "(3) PythonRDD[1] at RDD at PythonRDD.scala:48 []\n",
+      " |  ParallelCollectionRDD[0] at parallelize at PythonRDD.scala:475 []\n"
      ]
     }
    ],
@@ -628,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -648,8 +656,8 @@
      "output_type": "stream",
      "text": [
       "out= -0.288705467968\n",
-      "CPU times: user 5.72 ms, sys: 2.91 ms, total: 8.63 ms\n",
-      "Wall time: 1.59 s\n"
+      "CPU times: user 6.65 ms, sys: 3.84 ms, total: 10.5 ms\n",
+      "Wall time: 1.92 s\n"
      ]
     }
    ],
@@ -680,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -700,8 +708,8 @@
      "output_type": "stream",
      "text": [
       "out= 500000\n",
-      "CPU times: user 6.7 ms, sys: 3.09 ms, total: 9.78 ms\n",
-      "Wall time: 1.03 s\n"
+      "CPU times: user 7.37 ms, sys: 3.13 ms, total: 10.5 ms\n",
+      "Wall time: 1.06 s\n"
      ]
     }
    ],
@@ -747,12 +755,12 @@
     "\n",
     "We sometimes want to keep the intermediate results in memory so that we can reuse them without recalculating them. This will reduce the running time, at the cost of requiring more memory.\n",
     "\n",
-    "The method <span class=\"mark\">cache()</span> indicates that the RDD generates in this plan should be stored in memory. <span class=\"mark\">Note that this is still only a *plan*.</span> The actual calculation will be done only when the final result is seeked."
+    "The method `cache()` indicates that the RDD generates in this plan should be stored in memory. Note that this is still only a *plan*. The actual calculation will be done only when the final result is seeked."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -771,8 +779,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 3.07 ms, sys: 1.36 ms, total: 4.43 ms\n",
-      "Wall time: 6.54 ms\n"
+      "CPU times: user 3.11 ms, sys: 1.35 ms, total: 4.45 ms\n",
+      "Wall time: 12.4 ms\n"
      ]
     }
    ],
@@ -821,7 +829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -839,8 +847,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(3) PythonRDD[4] at RDD at PythonRDD.scala:43 [Memory Serialized 1x Replicated]\n",
-      " |  ParallelCollectionRDD[0] at parallelize at PythonRDD.scala:423 [Memory Serialized 1x Replicated]\n"
+      "(3) PythonRDD[4] at RDD at PythonRDD.scala:48 [Memory Serialized 1x Replicated]\n",
+      " |  ParallelCollectionRDD[0] at parallelize at PythonRDD.scala:475 [Memory Serialized 1x Replicated]\n"
      ]
     }
    ],
@@ -868,7 +876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -887,8 +895,8 @@
      "output_type": "stream",
      "text": [
       "out= -0.288705467968\n",
-      "CPU times: user 4.63 ms, sys: 2.74 ms, total: 7.38 ms\n",
-      "Wall time: 970 ms\n"
+      "CPU times: user 5.42 ms, sys: 2.85 ms, total: 8.27 ms\n",
+      "Wall time: 1.08 s\n"
      ]
     }
    ],
@@ -917,7 +925,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -937,8 +945,8 @@
      "output_type": "stream",
      "text": [
       "out= 500000\n",
-      "CPU times: user 7.71 ms, sys: 3.85 ms, total: 11.6 ms\n",
-      "Wall time: 156 ms\n"
+      "CPU times: user 6.39 ms, sys: 2.95 ms, total: 9.35 ms\n",
+      "Wall time: 223 ms\n"
      ]
     }
    ],
@@ -950,6 +958,12 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "deletable": true,
+    "editable": true,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    },
     "slideshow": {
      "slide_type": "slide"
     }
@@ -961,9 +975,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false,
+    "deletable": true,
+    "editable": true,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    },
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -985,6 +1005,12 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "deletable": true,
+    "editable": true,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    },
     "slideshow": {
      "slide_type": "subslide"
     }
@@ -992,16 +1018,21 @@
    "source": [
     "We can repartition `A` into a different number of partitions.\n",
     "\n",
-    "The method `.partitionBy(k)` creates `k` partitions.  \n",
-    "It expects to get a `(key,value)` RDD where the keys are integers.  \n",
+    "The method `.partitionBy(k)` expects to get a `(key,value)` RDD where the keys are integers.  \n",
     "it will put in partition `i` all of the element for which `key%k == i`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false,
+    "deletable": true,
+    "editable": true,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    },
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -1011,7 +1042,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10\n",
       "10\n"
      ]
     }
@@ -1019,13 +1049,18 @@
    "source": [
     "B= A.map(lambda x: (2*x,x)) \\\n",
     "    .partitionBy(10)\n",
-    "print B.getNumPartitions()\n",
-    "print B.glom().count()"
+    "print B.getNumPartitions()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
+    "deletable": true,
+    "editable": true,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    },
     "slideshow": {
      "slide_type": "subslide"
     }
@@ -1033,16 +1068,20 @@
    "source": [
     "**glom()** transforms each partition into a tuple (immutabe list) of elements.\n",
     "\n",
-    "As they are tuples, the workers can refer to elements of the partition by index.  \n",
-    "(but you cannot assign values to the elements, the RDD is still immutable)"
+    "As they are tuples, the workers can refer to elements of the partition by index. (but you cannot assign values to the elements, the RDD is still immutable)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false,
-    "scrolled": false,
+    "deletable": true,
+    "editable": true,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    },
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -1066,13 +1105,19 @@
     "    else:\n",
     "        return(None)\n",
     "\n",
-    "output=B.glom().map(getPartitionInfo).collect()\n",
+    "output=B.glom().map(lambda B: getPartitionInfo(B)).collect()\n",
     "print output"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
+    "deletable": true,
+    "editable": true,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    },
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -1082,34 +1127,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 92,
-   "metadata": {
-    "collapsed": false,
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "200000\n",
-      "[(0, 0), (10, 5), (20, 10), (30, 15), (40, 20)]\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Lets have a peek at the first glommed partition\n",
-    "Part=B.glom().first()\n",
-    "print len(Part)\n",
-    "print Part[:5]"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {
+    "deletable": true,
+    "editable": true,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    },
     "slideshow": {
      "slide_type": "slide"
     }
@@ -1121,6 +1146,12 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "deletable": true,
+    "editable": true,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    },
     "slideshow": {
      "slide_type": "subslide"
     }
@@ -1131,9 +1162,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false,
+    "deletable": true,
+    "editable": true,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    },
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -1156,6 +1193,12 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "deletable": true,
+    "editable": true,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    },
     "slideshow": {
      "slide_type": "subslide"
     }
@@ -1167,9 +1210,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false,
+    "deletable": true,
+    "editable": true,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    },
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -1193,6 +1242,12 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "deletable": true,
+    "editable": true,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    },
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -1204,6 +1259,12 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "deletable": true,
+    "editable": true,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    },
     "slideshow": {
      "slide_type": "subslide"
     }
@@ -1215,9 +1276,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false,
+    "deletable": true,
+    "editable": true,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    },
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -1239,6 +1306,12 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "deletable": true,
+    "editable": true,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    },
     "slideshow": {
      "slide_type": "subslide"
     }
@@ -1251,9 +1324,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false,
+    "deletable": true,
+    "editable": true,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    },
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -1263,7 +1342,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[11221, 9945, 9916, 9872, 9797, 9705, 9560, 9341, 9010, 11633]\n"
+      "[10000, 10000, 10000, 10000, 10000, 10000, 10000, 10000, 10000, 10000]\n"
      ]
     }
    ],
