--- a/Classes/1.5.MoreSpark/6. more RDD operations_CLASS.ipynb
+++ b/Classes/1.5.MoreSpark/6. more RDD operations_CLASS.ipynb
@@ -1174,7 +1174,7 @@
   "celltoolbar": "Slideshow",
   "hide_input": false,
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 2",
    "language": "python",
    "name": "python2"
   },
