--- a/Classes/1.SparkBasic/1. Spark Basics 1_CLASS.ipynb
+++ b/Classes/1.SparkBasic/1. Spark Basics 1_CLASS.ipynb
@@ -731,7 +731,7 @@
   "celltoolbar": "Slideshow",
   "hide_input": false,
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 2",
    "language": "python",
    "name": "python2"
   },
